--- a/www/css/style.styl
+++ b/www/css/style.styl
@@ -10,6 +10,9 @@ body
   font-family Arial
   font-size 16px
 
+.seccion-ruta, .seccion-usuario
+	display none
+
 .botones-ruta
 	display none
 	text-align center
